# essembly

./: .gitignore  Cargo.toml  config.toml  design.md  notes  readme.md  todo.md  vector
assets/: business_plan.md  development-practices.md  essembly-design.drawio  essembly-project-structure.drawio  feature_matrix.md  product_requirements_doc.md  project_plan.md  user_stories.csv
assets/development/: ci_cd.md  design.md
assets/development/business/: accounts.md
assets/parsers/: xblr.py
essembly/: Cargo.toml  readme.md
essembly-accounts/: Cargo.toml
essembly-accounts/src/: gl.rs  lib.rs  prelude.rs  tax.rs  timeclock.rs
essembly-api/: Cargo.toml  build.rs  config.toml  readme.md  todo.md
essembly-api/src/: db.rs  essembly_subscriber.rs  lib.rs  main.rs  protos_test.rs  size.rs  test_client.rs
essembly-api/src/databases/: db.rs
essembly-api/tls/: client_ca.pem
essembly-app/: Cargo.toml
essembly-app/src/: main.rs
essembly-cli/: Cargo.toml  config.toml  todo.md
essembly-cli/proto/: api.proto  registration.proto
essembly-cli/src/: cli.rs  config.rs  error.rs  fib  importer.rs  importop.rs  main.rs  vars.rs
essembly-cli/src/config/: test_config.toml
essembly-cli/src/databases/: error.rs
essembly-cli/tests/import_files/: Journal_Entry_704171.xml  foo.json
essembly-config/: Cargo.toml  readme.md  todo.md
essembly-config/src/: lib.rs
essembly-config/src/config/: test_config.toml
essembly-core/: Cargo.toml  entity.rs  readme.md
essembly-core/accounts/: Cargo.toml
essembly-core/accounts/src/: error.rs  gl.rs  lib.rs  prelude.rs  tax.rs  timeclock.rs
essembly-core/inventory/: Cargo.toml
essembly-core/logging/: Cargo.toml
essembly-core/logging/src/: essembly_subscriber.rs  lib.rs  simple.rs  trace.rs
essembly-core/src/: client.rs  error.rs  lib.rs  log  object.rs  operation.rs  permissions.rs  prelude.rs  traits.rs  user.rs
essembly-core/src/locale/: mod.rs
essembly-core/time/: Cargo.toml
essembly-core/time/src/: lib.rs  main.rs
essembly-interfaces/: Cargo.toml  readme.md
essembly-interfaces/proto/: api.proto
essembly-interfaces/proto/api/: api.proto
essembly-interfaces/proto/registration/: registration.proto
essembly-interfaces/src/: api.rs  build_protos.rs  lib.rs  registration.rs
essembly-inventory/: Cargo.toml
essembly-logging/: Cargo.toml  readme.md
essembly-logging/src/: lib.rs  simple.rs
essembly-micro/: Cargo.toml  main  readme.md
essembly-micro/.cargo/: config
essembly-micro/src/: main.rs
essembly-pos/: Cargo.toml
essembly-pos/src/: pos.rs
essembly-store/: Cargo.toml  build.rs  config.toml  readme.md  todo.md
essembly-store/proto/: api.proto  registration.proto
essembly-store/proto/google/types/: timeofday.proto
essembly-store/proto/susu/: susu.proto
essembly-store/src/: config.rs  db.rs  lib.rs  main.rs  prelude.rs  size.rs  store.rs  susu_error.rs  test_client.rs
essembly-store/src/databases/: db.rs  sled.rs
essembly-test/: Cargo.toml  readme.md
essembly-test/src/: lib.rs  test_client_packet.rs
essembly-test/tests/: protos_test.rs  test_client.rs  test_client_packet.rs  time_test.rs
essembly-vector/: Cargo.toml  vector.toml
essembly-vector/src/: main
essembly-wasi/: Cargo.toml  readme.md
essembly-wasi/src/: main.rs
essembly-web/: Cargo.toml
essembly/src/: accounts.rs  api.rs  app.rs  cli.rs  config.rs  core.rs  generators.rs  interfaces.rs  inventory.rs  lib.rs  logging.rs  micro.rs  permissions.rs  pos.rs  store.rs
essembly/tests/: mod
generated_protos/: api.rs
proto/: api.rs
proto-factory/: Cargo.toml  config.toml  readme.md  todo.md
proto-factory/src/: main.rs
proto/essembly/: api.proto
proto/google/types/: latlng.proto  postal_address.proto
