[package]
name = "essembly-api"
version = "0.1.0-alpha.1"
authors = ["blittable <blittable-bits@gmail.com>"]
edition = "2018"

[dependencies]
serde_derive = "1.0"
failure = "0.1.5"
lazy_static = "1.4.0"
tokio = { version = "0.2.0-alpha.6" }
failure_derive = "=0.1.5"
tonic = { git = "https://github.com/hyperium/tonic", features = ["rustls"] }
bytes = "0.4"
prost = "0.5"
futures-preview = { version = "=0.3.0-alpha.19", default-features = false, features = ["alloc"]}
tower = "0.3.0-alpha.2"
http = "0.1"


tracing = "0.1.5"
tracing-subscriber = { version = "0.1", path = "../../tracing/tracing-subscriber", features = ["json"] }
tracing-futures = { path = "../../tracing/tracing-futures", default-features = false, features = ["std-future"] }
tracing-attributes = { path = "../../tracing/tracing-attributes" }

[dependencies.essembly]
path = "../essembly"
version = "0.1.0-alpha.1"
default-features = false 
features = ["logger", "interfaces", "config"]

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 3  
debug = true   




