[package]
name = "essembly-api"
version = "0.1.0-alpha.1"
authors = ["blittable <blittable-bits@gmail.com>"]
edition = "2018"

[dependencies]
serde_derive = "1.0"
failure = "0.1.5"
lazy_static = "1.4.0"
tokio = { version = "0.2.0-alpha.6" }
failure_derive = "=0.1.5"
tonic = { git = "https://github.com/hyperium/tonic", features = ["rustls"] }
bytes = "0.4"
prost = "0.5"
futures-preview = { version = "=0.3.0-alpha.19", default-features = false, features = ["alloc"]}
tower = "0.3.0-alpha.2"
http = "0.1"

tracing = "0.1.10"
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing"}
tracing-attributes = { git = "https://github.com/tokio-rs/tracing"}
tracing-futures = { git = "https://github.com/tokio-rs/tracing"}

[dependencies.essembly-core]
path = "../essembly-core"
version = "0.1.0-alpha.1"

[dependencies.essembly-interfaces]
path = "../essembly-interfaces"
version = "0.1.0-alpha.1"

[dependencies.essembly-config]
path = "../essembly-config"
version = "0.1.0-alpha.1"

[dependencies.essembly-logging]
path = "../essembly-logging"
version = "0.1.0-alpha.1"

[build-dependencies]
essembly-interfaces = { path = "../essembly-interfaces" } 




