[package]
name = "essembly-cli"
version = "0.1.0-alpha.1"
edition = "2018"
authors = ["John <blittable.bits@gmail.com>"]
keywords = ["cli", "erp", "essembly"]
categories = ["erp", "business", "accounting"]

[dependencies]
tokio = { version = "0.2.0-alpha.5" }
tracing = { version = "0.1.5", optional = true }
structopt = "0.3.2"
structopt-derive = "0.3.2"
clap = { version = "2.33", default-features = false }
futures-core-preview = "=0.3.0-alpha.19"
serde = "1.0"
roxmltree = "0.7.1"
failure = "0.1.5"

[dev-dependencies]
rand = "0.7"


