[package]
name = "essembly-config"
version = "0.1.0-alpha.1"
edition = "2018"
authors = ["John <blittable.bits@gmail.com>"]
keywords = ["cli", "erp", "essembly"]
categories = ["erp", "business", "accounting"]

[dependencies]
tracing = { version = "0.1.5", optional = true }
serde = "1.0"
failure = "0.1.5"
toml = "0.5"
serde_json = "1.0"
regex = "1.0"
fallible = "0.1.2"
serde_derive = "1.0"
serde_regex = "0.4.0"
tempfile = "3.0.0"
dirs = "2.0.2"
lazy_static = "1.4.0"

[dependencies.essembly-core]
path = "../essembly-core"
version = "0.1.0-alpha.1"



