[package]
name = "essembly-core"
version = "0.1.0-alpha.1"
authors = ["blittable <blittable-bits@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
mockall = "0.5.1"

[dev-dependencies]
mockall = "0.5.1"
