[package]
name = "essembly-core"
version = "0.1.0-alpha.1"
authors = ["blittable <blittable-bits@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
bitflags = "1.2.0"
lazy_static = "1.4.0"
mockall = "0.5.2"
uuid = { version = "0.7", features = ["serde", "v4"] }
bytes = "0.4.12"

fluent-bundle = "0.8.0"
fluent-resmgr = "0.0.1"
fluent-locale = "0.10"
unic-langid = "0.6"
fluent-fallback = "0.0.1" 
elsa = "1.3.2"

[dev-dependencies]
unic-langid = { version = "0.6", features = ["macros"]}
mockall = "0.5.2"

