[package]
name = "essembly-interfaces"
version = "0.1.0-alpha.1"
authors = ["blittable <blittable-bits@gmail.com>"]
edition = "2018"

build = "src/build_protos.rs"

[dependencies]
tonic-build = { git = "https://github.com/hyperium/tonic" }
tonic = { git = "https://github.com/hyperium/tonic", features = ["rustls"] }
log = "0.4.8"
env_logger = "0.7.1"
prost-derive = "0.5.0"
bytes = "0.4"
prost = "0.5"

[build-dependencies]
tonic-build = { git = "https://github.com/hyperium/tonic" }
tonic = { git = "https://github.com/hyperium/tonic", features = ["rustls"] }
log = "0.4.8"
env_logger = "0.7.1"
prost-derive = "0.5.0"
tokio = "=0.2.0-alpha.6"
futures-preview = { version = "=0.3.0-alpha.19", default-features = false, features = ["alloc"]}
async-stream = "0.1.2"
http = "0.1"
tower = "=0.3.0-alpha.2"

# Required for routeguide
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.2"

# Required for wellknown types
prost-types = "0.5"


[features]
default = ["transport", "rustfmt"]
rustfmt = []
transport = []







