[package]
name = "essembly-store"
version = "0.1.0-alpha.1"
authors = ["blittable <blittable-bits@gmail.com>"]
edition = "2018"


[dependencies]
serde = "1.0"
serde_json = "1.0"
fallible = "0.1.2"
serde_derive = "1.0"
serde_regex = "0.4.0"
tempfile = "3.0.0"
dirs = "2.0.2"
failure = "0.1.5"
lazy_static = "1.4.0"
tracing = "0.1.9"
http = "0.1"
tracing-subscriber = "0.1.4"
tracing-attributes = "0.1.4"
tracing-futures = "0.0.1-alpha.1"
tracing-log = "0.1.0"
tokio = { version = "0.2.0-alpha.6" }
toml = "0.5"
failure_derive = "=0.1.5"
clap = {version = "2.33", features = ["yaml"]}
datetime = "0.4.7"
env_logger = "0.7.0"
num_cpus = "1.10.0"
scoped_threadpool = "0.1.9"
users = "0.9.1"
sled = { git = "https://github.com/spacejam/sled.git" }
tonic = { git = "https://github.com/hyperium/tonic", features = ["rustls"] }
futures-preview = { version = "=0.3.0-alpha.19", default-features = false, features = ["alloc"]}
prost-derive = "0.5.0"
prost = "0.5"
bytes = "0.4"
tower = "0.3.0-alpha.2"
regex = "1.0"

essembly-interfaces = { path = "../essembly-interfaces" } 

[build-dependencies]
essembly-interfaces = { path = "../essembly-interfaces" } 
log = "0.4.8"
env_logger = "0.7.1"
bytes = "0.4"

[features]
rustfmt = []




