[package]
name = "essembly-store"
version = "0.1.0-alpha.1"
authors = ["blittable <blittable-bits@gmail.com>"]
edition = "2018"


[dependencies]
serde = "1.0"
serde_json = "1.0"
fallible = "0.1.2"
serde_derive = "1.0"
serde_regex = "0.4.0"
dirs = "2.0.2"
failure = "0.1.5"
lazy_static = "1.4.0"
tracing = "0.1.9"
http = "0.1"
tokio = { version = "0.2.0-alpha.6" }
toml = "0.5"
failure_derive = "=0.1.5"
clap = {version = "2.33", features = ["yaml"]}
datetime = "0.4.7"
env_logger = "0.7.0"
num_cpus = "1.10.0"
users = "0.9.1"
sled = { git = "https://github.com/spacejam/sled.git", features = ["compression"] }
bytes = "0.4"
tower = "0.3.0-alpha.2"
regex = "1.0"
rand = "0.7"
tempfile = "3.1" 
rayon = "1.2.0" 


# essembly-core = { version = "=0.1.0-alpha.1", path = "../essembly", default-features = false, features = ["core"]} 

[dependencies.essembly-core]
path = "../essembly-core"
version = "0.1.0-alpha.1"

[dependencies.essembly-interfaces]
path = "../essembly-interfaces"
version = "0.1.0-alpha.1"

[dependencies.essembly-config]
path = "../essembly-config"
version = "0.1.0-alpha.1"

[build-dependencies]
essembly-interfaces = { path = "../essembly-interfaces" } 
log = "0.4.8"
env_logger = "0.7.1"
bytes = "0.4"

[features]
rustfmt = []




