[package]
name = "essembly-test"
version = "0.1.0"
authors = ["blittable <blittable-bits@gmail.com>"]
edition = "2018"

[workspace]

[[bin]]
name = "client_send"
path = "tests/test_client_packet.rs"

[lib]

#Separate the tests into features mostly so we can scope their dependencies and feature-gate

[dependencies]
tracing = { version = "0.1.10", optional = true }

structopt = "0.3.3"
structopt-derive = "0.3.2"
clap = { version = "2.33", default-features = false }
futures-core-preview = "=0.3.0-alpha.19"
serde = "1.0"
roxmltree = "0.7.1"
failure = "0.1.5"
http = "0.1"
tracing-subscriber = "0.1.4"
tracing-attributes = "0.1.4"
tracing-futures = "0.0.1-alpha.1"
tracing-log = "0.1.0"
tonic = { git = "https://github.com/hyperium/tonic", features = ["rustls"] }
futures-preview = { version = "=0.3.0-alpha.19", default-features = false, features = ["async-await", "alloc"]}
prost-derive = "0.5.0"
prost = "0.5"
bytes = "0.4"
tower = "0.3.0-alpha.2"
regex = "1.0"
serde_json = "1.0"
fallible = "0.1.2"
serde_derive = "1.0"
serde_regex = "0.4.0"
tempfile = "3.0.0"
dirs = "2.0.2"
tokio = "=0.2.0-alpha.6"
tokio-test = { git = "https://github.com/tokio-rs/tokio.git" }

# This is a regular dependency to support send real packets
essembly = { path = "../essembly", version = "0.1.0-alpha.1", features = ["logger", "interfaces"]}

[dev-dependencies]
essembly = { path = "../essembly", version = "0.1.0-alpha.1", features = ["logger", "interfaces"]}

[test-dependencies]
essembly = { path = "../essembly", version = "0.1.0-alpha.1" }






