[package]
name = "essembly-wasi"
version = "0.1.0"
authors = ["blittable <blittable-bits@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
essembly-core = { version = "=0.1.0-alpha.1", path = "../essembly-core" } 
accounts = { version = "=0.1.0-alpha.1", path = "../essembly-core/accounts" } 
