[package]
name = "essembly"
version = "0.1.0-alpha.1"
authors = ["blittable <blittable-bits@gmail.com>"]
edition = "2018"
description = """
A Point of Sales System
"""
categories = ["pos", "business", "food service", "distributed"]

[features]
default = [
"core",
"account",
"interfaces",
"cli",
"store",
]

core = ["essembly-core"]
logger = ["logging"]
account = ["accounts"]
interfaces = ["essembly-interfaces"]
cli = ["essembly-cli"]
store = ["essembly-store"]

[dependencies]
essembly-core = { version = "=0.1.0-alpha.1", optional = true, path = "../essembly-core" }
accounts = { version = "=0.1.0-alpha.1", optional = true, path = "../essembly-core/accounts" }
time = { version = "=0.1.0-alpha.1", optional = true, path = "../essembly-core/time" }
inventory = { version = "=0.1.0-alpha.1", optional = true, path = "../essembly-core/inventory" }

logging = { version = "=0.1.0-alpha.1", optional = true, path = "../essembly-core/logging", features = ["subscriber"]}
tracing = "0.1.9"
tracing-subscriber = "0.1.4"
tracing-attributes = "0.1.4"
tracing-futures = "0.0.1-alpha.1"

essembly-interfaces = { version = "=0.1.0-alpha.1", optional = true, path = "../essembly-interfaces" }
essembly-cli = { version = "=0.1.0-alpha.1", optional = true, path = "../essembly-cli" }
essembly-store = { version = "=0.1.0-alpha.1", optional = true, path = "../essembly-store" }

[package.metadata.docs.rs]
all-features = false 

[[test]]
name = "integrations"
path = "../tests/integrations/mod.rs"
required-features = ["protos"]
