[package]
name = "essembly"
version = "0.1.0-alpha.1"
authors = ["blittable <blittable-bits@gmail.com>"]
edition = "2018"
description = """
A Point of Sales System
"""
categories = ["pos", "business", "food service", "distributed"]

[features]
default = [
"core",
"account",
"interfaces",
"config",
"store",
"logger",
"simple"
]

config = ["essembly-config"]
core = ["essembly-core"]
logger = ["logging"]
account = ["accounts"]
interfaces = ["essembly-interfaces"]
store = ["essembly-store"]
simple = []

[dependencies]
accounts = { version = "=0.1.0-alpha.1", optional = true, path = "../essembly-core/accounts" }
time = { version = "=0.1.0-alpha.1", optional = true, path = "../essembly-core/time" }
inventory = { version = "=0.1.0-alpha.1", optional = true, path = "../essembly-core/inventory" }

essembly-core = { version = "=0.1.0-alpha.1", optional = true, path = "../essembly-core" }
essembly-interfaces = { version = "=0.1.0-alpha.1", optional = true, path = "../essembly-interfaces" }
essembly-config = { version = "=0.1.0-alpha.1", optional = true, path = "../essembly-config" }
essembly-store = { version = "=0.1.0-alpha.1", optional = true, path = "../essembly-store" }

logging = { version = "=0.1.0-alpha.1", optional = true, path = "../essembly-core/logging", features = ["subscriber", "trace", "simple"]}

tracing = "0.1.9"

[[test]]
name = "integrations"
path = "../essembly-test/src/lib.rs"
required-features = ["protos"]
