[package]
name = "essembly"
version = "0.1.0-alpha.1"
authors = ["blittable <blittable-bits@gmail.com>"]
edition = "2018"
description = """
A Business System for Sales 
"""
categories = ["pos", "business", "food service", "distributed"]

[features]
default = [
"core",
"account",
"interfaces",
"config",
"store",
"logging"
]

config = ["essembly-config"]
core = ["essembly-core"]
account = ["accounts"]
interfaces = ["essembly-interfaces"]
store = ["essembly-store"]
logging = ["essembly-logging"]

[dependencies]
accounts = { version = "=0.1.0-alpha.1", optional = true, path = "../essembly-core/accounts" }
inventory = { version = "=0.1.0-alpha.1", optional = true, path = "../essembly-core/inventory" }

essembly-api = { version = "=0.1.0-alpha.1", optional = true, path = "../essembly-api" }
essembly-core = { version = "=0.1.0-alpha.1", optional = true, path = "../essembly-core" }
essembly-interfaces = { version = "=0.1.0-alpha.1", optional = true, path = "../essembly-interfaces" }
essembly-config = { version = "=0.1.0-alpha.1", optional = true, path = "../essembly-config" }
essembly-logging = { version = "=0.1.0-alpha.1", optional = true, path = "../essembly-logging" }
essembly-store = { version = "=0.1.0-alpha.1", optional = true, path = "../essembly-store" }

tracing = "0.1.9"

[[test]]
name = "integrations"
path = "../essembly-test/src/lib.rs"
required-features = ["protos"]
