[package]
name = "proto-factory"
version = "0.1.0-alpha.1"
authors = ["blittable <blittable-bits@gmail.com>"]
edition = "2018"

[workspace]

build = "./build.rs"

[[bin]]
name = "build_protos"
path = "src/main.rs"

[dependencies]
tonic-build = { git = "https://github.com/hyperium/tonic" }
log = "0.4.8"
env_logger = "0.7.1"
prost-derive = "0.5.0"
bytes = "0.4"
prost = "0.5"

[features]
default = ["transport", "rustfmt"]
rustfmt = []
transport = []

[package.metadata.docs.rs]
all-features = true

[profile.release]
debug = true


