[package]
name = "accounts"
version = "0.1.0-alpha.1"
authors = ["blittable <blittable-bits@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.9"
uuid = { version = "0.8.1", features = ["serde", "v5"] }
mockall = "0.5.2"

[test-dependencies]
mockall = "0.5.2"

[dev-dependencies]
mockall = "0.5.2"
uuid = { version = "0.8.1", features = ["serde", "v5"] }