[package]
name = "logging"
version = "0.1.0-alpha.1"
authors = ["blittable <blittable-bits@gmail.com>"]
edition = "2018"

[features]
subscriber = ["tracing-subscriber"]
trace = ["tracing-subscriber", "tracing-attributes"]
simple = []

[dependencies]
essembly-core = { version = "0.1.0-alpha.1", path = ".." }

tracing = { version = "0.1", features = ["max_level_debug"] }
tracing-core = { git = "https://github.com/tokio-rs/tracing", version = "0.1.7" }
tracing-log = { git = "https://github.com/tokio-rs/tracing", version = "0.1.1" }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing", version = "0.1.5", optional = true }
tracing-attributes = { git = "https://github.com/tokio-rs/tracing", version = "0.1.5", optional = true }

lazy_static = "1.4.0"

# Tracing 
ansi_term = "0.12"
humantime = "1.3"
log = "0.4"

