[package]
name = "time"
version = "0.1.0-alpha.1"
authors = ["blittable <blittable-bits@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
essembly-core = { version = "0.1.0-alpha.1", path = ".." }
tokio = { git = "https://github.com/tokio-rs/tokio", default-features = false, features = ["timer"] }
futures-core-preview = "=0.3.0-alpha.19"
tokio-test = { git = "https://github.com/tokio-rs/tokio", version = "=0.2.0-alpha.6" }

[dev-dependencies]
tokio-test = { git = "https://github.com/tokio-rs/tokio", version = "=0.2.0-alpha.6" }
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }

